--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,26 @@
 @use'./partials/_mixins' as *;
 @use'./partials/_variables' as *;
 @import "~bootstrap/scss/bootstrap";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+.display-none {
+    display: none;
+}
