--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,8 @@
 @use'./partials/_variables' as *;
 @import "~bootstrap/scss/bootstrap";
 
+// General
+
 * {
     margin: 0;
     padding: 0;
@@ -23,4 +25,243 @@ a {
 
 .display-none {
     display: none;
+}
+
+header {
+    padding: 1rem;
+    // background-color: aqua;
+    @include flex(row, space-between, center);
+
+    img.brand-logo {
+        width: 80px
+    }
+
+    .active {
+        color: $primaryColor;
+    }
+
+    .underline {
+        position: absolute;
+        top: calc(100% + 1rem - 5px);
+        left: 0;
+        transform: translateX(-.5rem);
+
+        width: calc(100% - 1rem);
+        margin: 0 1rem;
+        height: 5px;
+        background-color: $primaryColor;
+    }
+
+    nav {
+        height: 80px;
+        // height: calc(100% + 2rem);
+
+        ul {
+            @include flex(row, center, center);
+            height: 100%;
+
+            li {
+                position: relative;
+                text-transform: uppercase;
+                height: 100%;
+
+                display: flex;
+                align-items: center;
+
+                a {
+                    text-decoration: none;
+                    color: $secondaryColor;
+                    font-size: .9rem;
+                    font-weight: 600;
+                    margin: 1rem;
+                }
+
+                a:hover {
+                    color: $tertiaryColor ;
+                }
+            }
+        }
+    }
+}
+
+main {
+    color: $colorLight;
+
+    div.jumbo {
+        height: 330px;
+        background-color: aqua;
+        background-image: url(../assets/jumbotron.jpg);
+        background-size: cover;
+
+    }
+
+    div.section-title {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateY(calc(-50% - 3rem)) translateX(-20%);
+        background-color: $primaryColor;
+
+        h1 {
+            padding: .5rem 1.2rem;
+            text-transform: uppercase;
+        }
+    }
+
+    div.content {
+        background-color: $quaternaryColor;
+        width: 100%;
+        padding: 3rem;
+
+        article.comics-card-container {
+            display: flex;
+            justify-content: space-between;
+            align-content: flex-start;
+            flex-wrap: wrap;
+            gap: 1rem;
+            position: relative;
+        }
+    }
+}
+
+div.selection {
+    color: $colorLight;
+    background-color: $primaryColor;
+    width: 100%;
+    padding: 3rem;
+    text-transform: uppercase;
+
+    div.container {
+        @include flex(row, space-between, center);
+
+        div.card {
+            margin: 0 2rem;
+
+            a {
+                color: $colorLight;
+                text-decoration: none;
+                @include flex(row, center, center);
+
+                img {
+                    height: 45px;
+                    margin-right: 1.3rem;
+                }
+
+                h3 {
+                    font-size: .8rem;
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+}
+
+div.comics-card {
+
+    div.img-container {
+        width: calc(100vw / 9);
+        height: calc((100vw / 6 - 5rem));
+        margin-bottom: 5rem;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: top;
+            margin-bottom: .7rem;
+        }
+
+        p {
+            text-transform: uppercase;
+            font-size: .75rem;
+        }
+    }
+
+}
+
+footer {
+    background-color: $secondaryColor;
+    height: 600px;
+
+    .footer-nav {
+        color: $colorLight;
+        background-image: url('../assets/footer-bg.jpg');
+        background-repeat: none;
+        background-size: cover;
+        overflow: hidden;
+
+        div.container {
+            @include flex(row, space-between, center);
+            height: 450px;
+
+            .nav-menu {
+                @include flex(column, left, start);
+                flex-wrap: wrap;
+                height: 100%;
+                width: 50%;
+                padding: 2rem;
+
+                .ul-list-container {
+                    margin-bottom: 1.3rem;
+                    margin-right: 2.5rem;
+
+                    h3 {
+                        margin-bottom: 1rem;
+                        text-transform: uppercase;
+                    }
+
+                    ul {
+                        li {
+                            margin-bottom: .5rem;
+
+                            a {
+                                color: $tertiaryColor;
+                                font-size: .9rem;
+                            }
+                        }
+                    }
+                }
+
+            }
+
+            img {
+                // height: 100%;
+                width: 40%;
+
+            }
+        }
+    }
+
+    button.button-cta {
+        border-radius: none;
+        border: 1px solid $primaryColor;
+        background-color: $secondaryColor;
+        color: $colorLight;
+        text-transform: uppercase;
+        font-size: .9rem;
+        padding: .7rem 1rem;
+    }
+
+    .footer-cta {
+        @include flex(row, space-between, center);
+        padding: 2rem;
+
+
+        nav {
+            @include flex(row, space-between, center);
+
+            a.cta-txt {
+                color: $primaryColor;
+                text-transform: uppercase;
+                margin-right: 12px;
+                font-size: 1.2rem;
+                font-weight: 600;
+            }
+
+            img {
+                margin: 7px;
+                width: 30px;
+            }
+        }
+    }
 }
