--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -18,7 +18,7 @@ a {
     text-decoration: none;
 }
 
-.container {
+.my_container {
     max-width: 80%;
     margin: 0 auto;
 }
@@ -89,7 +89,6 @@ main {
 
     div.jumbo {
         height: 330px;
-        background-color: aqua;
         background-image: url(../assets/jumbotron.jpg);
         background-size: cover;
 
